--- a/static/src/input.css
+++ b/static/src/input.css
@@ -2,4 +2,4 @@
 @import "flowbite/src/themes/default";
 @plugin "flowbite/plugin";
 @source "../../node_modules/flowbite";
-@custom-variant dark (&:where(.dark, .dark *));
+@source "../../node_modules/flowbite-datepicker";
